ux: force datagrid row height to 24

--- a/src/Views/BranchTree.axaml
+++ b/src/Views/BranchTree.axaml
@@ -23,6 +23,7 @@
     <DataGrid.Styles>
       <Style Selector="DataGridRow" x:DataType="vm:BranchTreeNode">
         <Setter Property="CornerRadius" Value="{Binding CornerRadius}" />
+        <Setter Property="Height" Value="24"/>
       </Style>
 
       <Style Selector="DataGridRow /template/ Border#RowBorder">
