--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -62,15 +62,10 @@
               <DataTemplate x:DataType="{x:Type m:Commit}">
                 <Border Margin="{Binding Margin}">
                   <StackPanel Orientation="Horizontal" Margin="2,0,0,0">
-                    <Ellipse Width="5" Height="5"
-                             Margin="0,0,4,0"
-                             Fill="{DynamicResource Brush.Accent}"
-                             IsVisible="{Binding CanPushToUpstream}"/>
-
-                    <Ellipse Width="5" Height="5"
-                             Margin="0,0,4,0"
-                             Fill="{DynamicResource Brush.FG1}"
-                             IsVisible="{Binding CanPullFromUpstream}"/>
+                    <v:CommitStatusIndicator CurrentBranch="{Binding $parent[v:Histories].CurrentBranch}"
+                                             AheadBrush="{DynamicResource Brush.Accent}"
+                                             BehindBrush="{DynamicResource Brush.FG1}"
+                                             VerticalAlignment="Center"/>
 
                     <v:CommitRefsPresenter IsVisible="{Binding HasDecorators}"
                                            IconBackground="{DynamicResource Brush.DecoratorIconBG}"
