--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1257,6 +1257,38 @@
     <Setter Property="Opacity" Value="1"/>
   </Style>
   
+  <Style Selector="ToggleButton.tag_display_mode">
+    <Setter Property="Margin" Value="0" />
+    <Setter Property="Background" Value="Transparent"/>
+    <Setter Property="Template">
+      <ControlTemplate>
+        <Border Background="Transparent"
+                Width="{TemplateBinding Width}"
+                Height="{TemplateBinding Height}"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center">
+          <Path x:Name="ChevronPath"
+                Width="11" Height="11"
+                Margin="0,1,0,0"
+                Data="{StaticResource Icons.Tree}"
+                Fill="{DynamicResource Brush.FG1}"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Opacity="0.65"/>
+        </Border>
+      </ControlTemplate>
+    </Setter>
+
+    <Style Selector="^:checked /template/ Path#ChevronPath">
+      <Setter Property="Fill" Value="{DynamicResource Brush.Accent}" />
+    </Style>
+
+    <Style Selector="^:pointerover /template/ Path#ChevronPath">
+      <Setter Property="Fill" Value="{DynamicResource Brush.Accent}" />
+      <Setter Property="Opacity" Value="1"/>
+    </Style>
+  </Style>
+  
   <Style Selector="Slider">
     <Style.Resources>
       <Thickness x:Key="SliderTopHeaderMargin">0,0,0,4</Thickness>
