--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -188,93 +188,35 @@
 
           <!-- Tags -->
           <ToggleButton Grid.Row="4" Classes="group_expander" IsChecked="{Binding IsTagGroupExpanded, Mode=TwoWay}">
-            <Grid ColumnDefinitions="Auto,*,Auto">
+            <Grid ColumnDefinitions="Auto,*,Auto,Auto">
               <TextBlock Grid.Column="0" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Tags}"/>
               <TextBlock Grid.Column="1" Text="{Binding Tags, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
-              <Button Grid.Column="2" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding CreateNewTag}" ToolTip.Tip="{DynamicResource Text.Repository.Tags.Add}">
+              <ToggleButton Grid.Column="2" 
+                            Classes="tag_display_mode" 
+                            Width="14" 
+                            IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowTagsAsTree, Mode=TwoWay}"
+                            ToolTip.Tip="{DynamicResource Text.Repository.ShowTagsAsTree}"/>
+              <Button Grid.Column="3" 
+                      Classes="icon_button" 
+                      Width="14"
+                      Margin="8,0"
+                      Command="{Binding CreateNewTag}" 
+                      ToolTip.Tip="{DynamicResource Text.Repository.Tags.Add}">
                 <Path Width="12" Height="12" Data="{StaticResource Icons.Tag.Add}"/>
               </Button>
             </Grid>
           </ToggleButton>
-          <DataGrid Grid.Row="5"
-                    x:Name="TagsList"
-                    Height="0"
-                    Margin="8,0,4,0"
-                    Background="Transparent"
-                    ItemsSource="{Binding VisibleTags}"
-                    SelectionMode="Single"
-                    CanUserReorderColumns="False"
-                    CanUserResizeColumns="False"
-                    CanUserSortColumns="False"
-                    IsReadOnly="True"
-                    HeadersVisibility="None"
-                    Focusable="False"
-                    RowHeight="24"
-                    HorizontalScrollBarVisibility="Disabled"
-                    VerticalScrollBarVisibility="Auto"
-                    IsVisible="{Binding IsTagGroupExpanded, Mode=OneWay}"
-                    SelectionChanged="OnTagDataGridSelectionChanged"
-                    ContextRequested="OnTagContextRequested"
-                    PropertyChanged="OnLeftSidebarDataGridPropertyChanged">
-            <DataGrid.Styles>
-              <Style Selector="DataGridRow">
-                <Setter Property="CornerRadius" Value="4" />
-                <Setter Property="Height" Value="24"/>
-              </Style>
-
-              <Style Selector="DataGridRow /template/ Border#RowBorder">
-                <Setter Property="ClipToBounds" Value="True" />
-              </Style>
-
-              <Style Selector="Grid.repository_leftpanel DataGridRow:pointerover /template/ Rectangle#BackgroundRectangle">
-                <Setter Property="Fill" Value="{DynamicResource Brush.AccentHovered}" />
-                <Setter Property="Opacity" Value=".5"/>
-              </Style>
-              <Style Selector="Grid.repository_leftpanel DataGridRow:selected /template/ Rectangle#BackgroundRectangle">
-                <Setter Property="Fill" Value="{DynamicResource Brush.AccentHovered}" />
-                <Setter Property="Opacity" Value="1"/>
-              </Style>
-              <Style Selector="Grid.repository_leftpanel:focus-within DataGridRow:selected /template/ Rectangle#BackgroundRectangle">
-                <Setter Property="Fill" Value="{DynamicResource Brush.Accent}" />
-                <Setter Property="Opacity" Value=".65"/>
-              </Style>
-              <Style Selector="Grid.repository_leftpanel:focus-within DataGridRow:selected:pointerover /template/ Rectangle#BackgroundRectangle">
-                <Setter Property="Fill" Value="{DynamicResource Brush.Accent}" />
-                <Setter Property="Opacity" Value=".8"/>
-              </Style>
-            </DataGrid.Styles>
-
-            <DataGrid.Columns>
-              <DataGridTemplateColumn Header="ICON">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate x:DataType="{x:Type m:Tag}">
-                    <Path Width="10" Height="10" Margin="8,0" Data="{StaticResource Icons.Tag}"/>
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
-
-              <DataGridTemplateColumn Width="*" Header="NAME">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate x:DataType="{x:Type m:Tag}">
-                    <TextBlock Text="{Binding Name}" Classes="primary" TextTrimming="CharacterEllipsis" />
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
-
-              <DataGridTemplateColumn Header="FILTER">
-                <DataGridTemplateColumn.CellTemplate>
-                  <DataTemplate x:DataType="{x:Type m:Tag}">
-                    <ToggleButton Classes="filter"
-                                  Margin="0,0,8,0"
-                                  Background="Transparent"
-                                  IsCheckedChanged="OnTagFilterIsCheckedChanged"
-                                  IsChecked="{Binding IsFiltered}"
-                                  ToolTip.Tip="{DynamicResource Text.Filter}"/>
-                  </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-              </DataGridTemplateColumn>
-            </DataGrid.Columns>
-          </DataGrid>
+          <v:TagsView Grid.Row="5"
+                      x:Name="TagsList"
+                      Height="0"
+                      Margin="8,0,4,0"
+                      Background="Transparent"
+                      ShowTagsAsTree="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowTagsAsTree, Mode=OneWay}"
+                      Tags="{Binding VisibleTags}"
+                      Focusable="False"
+                      IsVisible="{Binding IsTagGroupExpanded, Mode=OneWay}"
+                      SelectionChanged="OnTagsSelectionChanged"
+                      RowsChanged="OnTagsRowsChanged"/>
 
           <!-- Submodules -->
           <ToggleButton Grid.Row="6" Classes="group_expander" IsChecked="{Binding IsSubmoduleGroupExpanded, Mode=TwoWay}">
