revert: remove issue link support in commit list
* improve render performance
* the links in commit list are very easy to click by mistake

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -77,11 +77,10 @@
                                            FontSize="10"
                                            VerticalAlignment="Center"/>
 
-                    <v:CommitSubjectPresenter Classes="primary" 
-                                              Subject="{Binding Subject}"
-                                              IssueTrackerRules="{Binding $parent[v:Histories].IssueTrackerRules}"
-                                              Opacity="{Binding Opacity}"
-                                              FontWeight="{Binding FontWeight}"/>
+                    <TextBlock Classes="primary"
+                               Text="{Binding Subject}"
+                               Opacity="{Binding Opacity}"
+                               FontWeight="{Binding FontWeight}"/>
                   </StackPanel>
                 </Border>
               </DataTemplate>
