--- a/src/Views/RevisionFiles.axaml
+++ b/src/Views/RevisionFiles.axaml
@@ -73,7 +73,7 @@
             <DataTemplate DataType="m:RevisionSubmodule">
               <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" Margin="8,8,8,0">
                 <TextBlock Text="{DynamicResource Text.CommitDetail.Files.Submodule}" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center" Foreground="{DynamicResource Brush.FG2}"/>
-                <v:CommitBaseInfo Margin="0,16,0,0" CanNavigate="False" Content="{Binding Commit}" Message="{Binding FullMessage}"/>
+                <v:CommitBaseInfo Margin="0,16,0,0" Content="{Binding Commit}" Message="{Binding FullMessage}"/>
               </StackPanel>
             </DataTemplate>
           </ContentControl.DataTemplates>
