--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -91,15 +91,14 @@
                 <Grid Classes="view_mode" ColumnDefinitions="32,*,Auto">
                   <Path Grid.Column="0" Width="12" Height="12" Data="{StaticResource Icons.Changes}"/>
                   <TextBlock Grid.Column="1" Classes="primary" Text="{DynamicResource Text.WorkingCopy}"/>
-                  <Border Grid.Column="2"
-                          Margin="6,0"
-                          Height="18"
-                          CornerRadius="9"
-                          VerticalAlignment="Center"
-                          Background="{DynamicResource Brush.Badge}"
-                          IsVisible="{Binding LocalChangesCount, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
-                    <TextBlock Classes="primary" FontSize="10" HorizontalAlignment="Center" Margin="9,0" Text="{Binding LocalChangesCount}" Foreground="{DynamicResource Brush.BadgeFG}"/>
-                  </Border>
+                  <v:CounterPresenter Grid.Column="2"
+                                      Margin="6,0"
+                                      VerticalAlignment="Center"
+                                      Count="{Binding LocalChangesCount}"
+                                      FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
+                                      FontSize="10"
+                                      Foreground="{DynamicResource Brush.BadgeFG}"
+                                      Background="{DynamicResource Brush.Badge}"/>
                 </Grid>
               </ListBoxItem>
 
@@ -107,15 +106,14 @@
                 <Grid Classes="view_mode" ColumnDefinitions="32,*,Auto">
                   <Path Grid.Column="0" Width="12" Height="12" Data="{StaticResource Icons.Stashes}"/>
                   <TextBlock Grid.Column="1" Classes="primary" Text="{DynamicResource Text.Stashes}"/>
-                  <Border Grid.Column="2"
-                          Margin="6,0"
-                          Height="18"
-                          CornerRadius="9"
-                          VerticalAlignment="Center"
-                          Background="{DynamicResource Brush.Badge}"
-                          IsVisible="{Binding StashesCount, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
-                    <TextBlock Classes="primary" FontSize="10" HorizontalAlignment="Center" Margin="9,0" Text="{Binding StashesCount}" Foreground="{DynamicResource Brush.BadgeFG}"/>
-                  </Border>
+                  <v:CounterPresenter Grid.Column="2"
+                                      Margin="6,0"
+                                      VerticalAlignment="Center"
+                                      Count="{Binding StashesCount}"
+                                      FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
+                                      FontSize="10"
+                                      Foreground="{DynamicResource Brush.BadgeFG}"
+                                      Background="{DynamicResource Brush.Badge}"/>
                 </Grid>
               </ListBoxItem>
             </ListBox>
