--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -77,10 +77,11 @@
                                            FontSize="10"
                                            VerticalAlignment="Center"/>
 
-                    <TextBlock Classes="primary"
-                               Text="{Binding Subject}"
-                               Opacity="{Binding Opacity}"
-                               FontWeight="{Binding FontWeight}"/>
+                    <v:CommitSubjectPresenter Classes="primary"
+                                              Subject="{Binding Subject}"
+                                              IssueTrackerRules="{Binding $parent[v:Histories].IssueTrackerRules}"
+                                              Opacity="{Binding Opacity}"
+                                              FontWeight="{Binding FontWeight}"/>
                   </StackPanel>
                 </Border>
               </DataTemplate>
