--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -114,6 +114,91 @@
 
       <TabItem>
         <TabItem.Header>
+          <TextBlock Classes="tab_header" Text="{DynamicResource Text.Configure.CommitMessageTemplate}"/>
+        </TabItem.Header>
+
+        <Grid ColumnDefinitions="200,*" Height="250" Margin="0,8,0,16">
+          <Border Grid.Column="0"
+                  BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}"
+                  Background="{DynamicResource Brush.Contents}">
+            <Grid RowDefinitions="*,1,Auto">
+              <ListBox Grid.Row="0"
+                       Background="Transparent"
+                       ItemsSource="{Binding CommitTemplates}"
+                       SelectedItem="{Binding SelectedCommitTemplate, Mode=TwoWay}"
+                       SelectionMode="Single">
+                <ListBox.Styles>
+                  <Style Selector="ListBoxItem">
+                    <Setter Property="MinHeight" Value="0"/>
+                    <Setter Property="Height" Value="26"/>
+                    <Setter Property="Padding" Value="4,2"/>
+                  </Style>
+                </ListBox.Styles>
+
+                <ListBox.ItemsPanel>
+                  <ItemsPanelTemplate>
+                    <StackPanel Orientation="Vertical"/>
+                  </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+
+                <ListBox.ItemTemplate>
+                  <DataTemplate DataType="m:CommitTemplate">
+                    <Grid ColumnDefinitions="Auto,*">
+                      <Path Grid.Column="0" Width="14" Height="14" Data="{StaticResource Icons.Code}"/>
+                      <TextBlock Grid.Column="1" Text="{Binding Name}" Margin="8,0" TextTrimming="CharacterEllipsis"/>
+                    </Grid>
+                  </DataTemplate>
+                </ListBox.ItemTemplate>
+              </ListBox>
+
+              <Rectangle Grid.Row="1" Height="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"/>
+
+              <StackPanel Grid.Row="2" Orientation="Horizontal" Background="{DynamicResource Brush.ToolBar}">
+                <Button Classes="icon_button" Command="{Binding AddCommitTemplate}">
+                  <Path Width="14" Height="14" Data="{StaticResource Icons.Plus}"/>
+                </Button>
+
+                <Rectangle Width="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
+
+                <Button Classes="icon_button" Command="{Binding RemoveSelectedCommitTemplate}">
+                  <Path Width="14" Height="14" Data="{StaticResource Icons.Window.Minimize}"/>
+                </Button>
+
+                <Rectangle Width="1" Fill="{DynamicResource Brush.Border2}" HorizontalAlignment="Left" VerticalAlignment="Stretch"/>
+              </StackPanel>
+            </Grid>
+          </Border>
+
+          <ContentControl Grid.Column="1" Margin="16,0,0,0">
+            <ContentControl.Content>
+              <Binding Path="SelectedCommitTemplate">
+                <Binding.TargetNullValue>
+                  <Path Width="64" Height="64"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Fill="{DynamicResource Brush.FG2}"
+                        Data="{StaticResource Icons.Empty}"/>
+                </Binding.TargetNullValue>
+              </Binding>
+            </ContentControl.Content>
+
+            <ContentControl.DataTemplates>
+              <DataTemplate DataType="m:CommitTemplate">
+                <StackPanel Orientation="Vertical">
+                  <TextBlock Text="{DynamicResource Text.Configure.CommitMessageTemplate.Name}"/>
+                  <TextBox Margin="0,4,0,0" CornerRadius="3" Height="28" Text="{Binding Name, Mode=TwoWay}"/>
+
+                  <TextBlock Margin="0,12,0,0" Text="{DynamicResource Text.Configure.CommitMessageTemplate.Content}"/>
+                  <v:CommitMessageTextBox Height="150" Text="{Binding Content, Mode=TwoWay}"/>
+                </StackPanel>
+              </DataTemplate>
+            </ContentControl.DataTemplates>
+          </ContentControl>
+        </Grid>
+      </TabItem>
+
+      <TabItem>
+        <TabItem.Header>
           <TextBlock Classes="tab_header" Text="{DynamicResource Text.Configure.IssueTracker}"/>
         </TabItem.Header>
 
